clang/test/BSC/Positive/Driver/rewrite-bsc/Generic/rewrite_bsc_generic_with_header_3/user_header.h
int y = 2;

struct UserHStruct {
  int a;
  int b;
};