clang/test/BSC/Negative/Ownership/Owned/owned_struct/owned_struct_cbs.h
struct A {
    owned int a;
    owned int* b;
};
